# online_menu_fastapi

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: e62ce470f2bd_initial_migration.py
src/backoffice/: main.py
src/backoffice/api/: health.py
src/backoffice/api/v1/: router.py
src/backoffice/api/v1/auth/: __init__.py  auth_router.py
src/backoffice/api/v1/company/: members_router.py
src/backoffice/api/v1/location/: __init__.py  geocoding_router.py  location_router.py
src/backoffice/api/v1/menu/: __init__.py  menu_image_router.py  menu_item_router.py
src/backoffice/apps/account/models/: __init__.py  oauth_account.py  refresh_token.py  user.py
src/backoffice/apps/account/schemas/: __init__.py  auth.py  user.py
src/backoffice/apps/account/services/: jwt_service.py  oauth_service.py  user_service.py
src/backoffice/apps/company/models/: __init__.py  company.py  company_branch.py  company_member.py
src/backoffice/apps/company/schemas/: __init__.py
src/backoffice/apps/company/services/: __init__.py
src/backoffice/apps/location/models/: __init__.py  address.py  city.py  country.py  geocoding_result.py  region.py  street.py
src/backoffice/apps/location/schemas/: __init__.py  address.py  city.py  country.py  geocoding.py  region.py  (+1 more)
src/backoffice/core/: app.py  config.py  context.py  dependencies.py  exceptions.py  logging.py  middleware.py
src/backoffice/core/services/: __init__.py  kafka_client.py  s3_client.py  slug_service.py
src/backoffice/models/: __init__.py  all.py  base.py  mixins.py
(+20 files in other folders)
